# payment_processor

./: Cargo.toml  README.md
doc/: Readme.txt  crates.js  help.html  search-index.js  settings.html  src-files.js
doc/payment_processor/: all.html  fn.main.html  index.html  sidebar-items.js
doc/payment_processor/client_handler/: index.html  sidebar-items.js  struct.AppState.html  struct.client_balance.html  struct.new_client.html  struct.new_credit_transaction.html  struct.new_debit_transaction.html  struct.store_balances.html
doc/payment_processor/client_model/: index.html  sidebar-items.js  static.NEXT_ID.html  struct.Client.html
doc/src/payment_processor/: client_handler.rs.html  client_model.rs.html  main.rs.html
doc/trait.impl/actix_web/service/: trait.HttpServiceFactory.js
doc/trait.impl/core/clone/: trait.Clone.js
doc/trait.impl/core/fmt/: trait.Debug.js
doc/trait.impl/core/hash/: trait.Hash.js
doc/trait.impl/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
doc/trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/trait.impl/serde/de/: trait.Deserialize.js
doc/trait.impl/serde/ser/: trait.Serialize.js
postman_collection/: payment_api.postman_collection.json
src/: client_handler.rs  client_model.rs  main.rs
