[package]
name = "payment_processor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
rust_decimal = "1.34.3"
tokio = { version = "1.36.0", features = ["rt", "rt-multi-thread", "macros"] }
lazy_static = "1.4.0"